--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -68,9 +68,9 @@ li a {
 }
 
 .github a {
-    background-image: url("..images/github.png");
+    background-image: url("../images/github.png");
 }
 .skype a {
-    background-image: url("..images/skype.png");
+    background-image: url("../images/skype.png");
 }
 
